--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.438.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "resend": "^4.0.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
