--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-hook/debounce": "^4.0.0",
     "ai": "^3.3.28",
     "axios": "^1.7.7",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
